# lamu

./: .coveragerc  .env.example  .gitignore  .gitmodules  .graphifyignore  AGENTIC_BIBLE.md  AGENT_CHATTER.md  CLAUDE.md  PROGRAMMING_BIBLE_v2.md  README.md  chat.sh  chat_repl.py  justfile  models.yaml  pyproject.toml  start.sh  stop.sh  swap.sh
lamu-rs/: Cargo.toml  PORT_PLAN.md
lamu-rs/blut/: Cargo.toml
lamu-rs/blut/benches/: framework.rs
lamu-rs/blut/python/: pyproject.toml  test_build_optimizer.py  trainer_distill.py
lamu-rs/blut/src/: conversations.rs  jobs.rs  lib.rs  main.rs  paths.rs  policy.rs  python_backend.rs
lamu-rs/blut/src/artifacts/: checkpoint.rs  mod.rs  preferences.rs
lamu-rs/blut/src/framework/: artifact.rs  cache.rs  plan.rs  status.rs
lamu-rs/blut/src/recipes/: recipe.rs
lamu-rs/blut/src/stages/: dpo_train.rs  (+2 more)
lamu-rs/blut/tests/: cli_smoke.rs  convert_smoke.rs  python_backend_smoke.rs
lamu-rs/deploy/: README.md  lamu-serve.env.example  lamu-serve.service
lamu-rs/docs/: API.md  ROADMAP.md  bug-audit-2026-06.md  comparison-odysseus.md  cookbook-and-double-down-plan.md
lamu-rs/docs/decisions/: 0001-mcp-first-orchestration-http-thin-compat-shim.md  0002-lean-rust-backend.md  0003-vram-scheduler-with-modality-tiered-eviction.md  0004-managed-subprocess-backends-with-unconditional-pdeathsig.md  0005-bind-loopback-by-default.md  0006-http-path-never-auto-evicts.md  0007-unified-cloud-routing-anthropic-vs-openai-compat.md  0008-headless-council-instead-of-compare-ui.md  0009-confined-media-output-paths.md  0010-capability-modality-routing-embedding-never-chat-routed.md  0011-structural-untrusted-content-envelope.md  0012-minimal-bearer-auth.md  0013-at-rest-key-encryption-deferred.md  0014-single-gpu-and-root-paths-intentional.md  0015-cookbook-roofline-scoring-engine.md  0016-backend-orchestrator-byo-frontend.md  0017-multi-gpu-device-pool.md  0018-multi-user-per-token-identity.md  0019-cloud-model-catalog-sync.md  0020-scale-testing-strategy.md  0021-context-occupancy-and-self-compaction.md  0022-http-serving-baseline.md  0023-module-architecture.md  0024-mcp-serial-dispatch-loop.md  0025-registry-out-of-work-tree.md  0026-backend-kind-string-dispatch.md  0027-typed-toolctx-error-seam.md  0028-unified-lamu-db.md  0029-lamu-memory-module-crate.md  0030-local-first-embedding.md  0031-persistent-turbovec-index.md  0032-memory-as-a-service.md  0033-inproc-engine-shim.md  0034-onnx-embeddings-backend.md  0035-hf-candle-runtime.md  0036-acp-agent-surface.md  0037-provider-grade-serving.md  0038-a2a-agent-surface.md  0039-causal-event-hypergraph.md  0040-race-safe-load-lifecycle.md  (+4 more)
lamu-rs/docs/design/: media-modalities.md
lamu-rs/lamu-api/: Cargo.toml
lamu-rs/lamu-api/src/: auth.rs  keys.rs  lib.rs  memory_api.rs  metrics.rs  openai_compat.rs  quota.rs
lamu-rs/lamu-api/tests/: frontend_matrix.rs  http.rs  load_e2e.rs  memory_http.rs  perf_bench.rs  spec_e2e.rs
lamu-rs/lamu-cli/: Cargo.toml
lamu-rs/lamu-cli/src/: chat_tui.rs  clean.rs  cloud_models.rs  cloud_sync.rs  favorites.rs  lamu_config.rs  main.rs  mcp_servers.rs  md_stream.rs  memory_admin.rs  providers.rs  repl.rs  theme.rs  tui.rs
lamu-rs/lamu-cli/tests/: cli.rs  composition_root.rs
lamu-rs/lamu-cli/themes/: lamu.toml  skynet.toml
lamu-rs/lamu-core/: Cargo.toml
lamu-rs/lamu-core/src/: config.rs  cookbook.rs  error.rs  health.rs  lib.rs  lifecycle.rs  loader.rs  media_paths.rs  observability.rs  queue.rs  reasoning.rs  reconcile.rs  registry.rs  router.rs  scheduler.rs  scheduler_lock.rs  sse.rs  supervisor.rs  test_support.rs  tools_ext.rs  types.rs  web_search.rs
lamu-rs/lamu-core/tests/: test_queue_load.rs  test_reasoning.rs  test_registry.rs  test_router.rs  test_scheduler.rs
lamu-rs/lamu-hf/: Cargo.toml
lamu-rs/lamu-hf/src/: backend.rs  engine.rs  lib.rs
lamu-rs/lamu-image/: Cargo.toml
lamu-rs/lamu-image/src/: comfyui.rs  image.rs  lib.rs
lamu-rs/lamu-inproc/: Cargo.toml
lamu-rs/lamu-inproc/src/: lib.rs
lamu-rs/lamu-jart/: Cargo.toml
lamu-rs/lamu-jart-frontend/: Cargo.toml
lamu-rs/lamu-jart-frontend/src/: lib.rs  orchestrator.rs
lamu-rs/lamu-jart/src/: answer.rs  chat.rs  deep_research.rs  drafts.rs  lib.rs  research.rs  session.rs  web_search.rs
lamu-rs/lamu-jart/tests/: agentic_flows.rs
lamu-rs/lamu-mcp/: Cargo.toml
lamu-rs/lamu-mcp/assets/: central_review_policy.md
lamu-rs/lamu-mcp/src/: auto_context.rs  cloud.rs  compact.rs  context.rs  cookbook_tool.rs  council.rs  handlers.rs  image.rs  lib.rs  lifetime_memory.rs  media_paths.rs  memory.rs  rag.rs  server.rs  tools.rs  train_tool.rs  tts.rs  untrusted.rs  vector_index.rs
lamu-rs/lamu-mcp/tests/: dispatch_smoke.rs  embedder_registration.rs
lamu-rs/lamu-memory/: Cargo.toml  build.rs
lamu-rs/lamu-memory/src/: causal_graph.rs  embedder.rs  hybrid.rs  lib.rs  lifetime_memory.rs  memory.rs  migrate.rs  rag.rs  reembed.rs  store.rs  tv_store.rs  vector_index.rs
lamu-rs/lamu-onnx/: Cargo.toml
lamu-rs/lamu-onnx/src/: backend.rs  engine.rs  lib.rs
lamu-rs/lamu-providers/: Cargo.toml
lamu-rs/lamu-providers/src/: cloud_config.rs  headers.rs  lib.rs  payload.rs  types.rs
lamu-rs/lamu-train/: Cargo.toml
lamu-rs/lamu-train/python/: datasets_loader.py  pyproject.toml  trainer.py  trainer_dpo.py
lamu-rs/lamu-train/src/: backend.rs  conversations.rs  convert.rs  datasets_db.rs  error.rs  jobs.rs  lib.rs  main.rs  paths.rs  protocol.rs  python_backend.rs  spec.rs
lamu-rs/lamu-train/tests/: cli_smoke.rs  convert_smoke.rs  python_backend_smoke.rs
lamu-rs/lamu-tts/: Cargo.toml
lamu-rs/lamu-tts/src/: fish_speech.rs  lib.rs  tts.rs
lamu-rs/loadtest/: oha.sh
lamu-rs/loadtest/baseline/: anthropic-502-repro.txt  anthropic-c1.json  anthropic-c16.json  anthropic-c4.json  anthropic-c64.json  baseline.json  ollama-c1.json  ollama-c16.json  ollama-c4.json  ollama-c64.json  openai-128tok-c1.json  openai-128tok-c16.json  openai-128tok-c4.json  openai-c1.json  openai-c16.json  openai-c4.json  openai-c64.json  read-health-c16.json  read-metrics-c16.json  read-v1-models-c16.json
(+272 files in other folders)
