[project]
name = "lamu"
version = "2.0.0"
description = "LAMU — MCP-first model management service"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "fastapi",
    "uvicorn",
    "pyyaml",
    "pydantic",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lamu*"]
exclude = ["tests*", "lucebox-hub*", "deps*", "graphify-out*"]
