[workspace]
resolver = "2"
members = [
    "lamu-core",
    "lamu-mcp",
    "lamu-api",
    "lamu-cli",
    "lamu-providers",
    "lamu-image",
    "lamu-tts",
]

# BLUT (Brian Lam's Universal Trainer) extracted to its own repo
# at ../blut/. lamu-mcp's train_from_conversations tool shells out
# to the `blut` binary; there is no Rust dep across the boundary.

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["LAMU contributors"]
license = "MIT"
repository = "https://github.com/Quitetall/lamu"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Path/fs
walkdir = "2"

# Internal crates
lamu-core = { path = "lamu-core" }
lamu-providers = { path = "lamu-providers" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
