[package]
name = "blut"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "BLUT — Brian Lam's Universal Trainer. Stage→Plan→Recipe orchestrator framework for local ML training (SFT, DPO, distillation, eval)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "blut"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-trait = "0.1"
nix = { version = "0.29", features = ["signal"] }
dirs = "5"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
humantime = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
schemars = "0.8"
tokio-util = "0.7"
lamu-core = { path = "../lamu-core" }

[dev-dependencies]
tempfile = "3"
