[package]
name = "lamu-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI-compatible HTTP API"

[dependencies]
lamu-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
anyhow.workspace = true
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
parking_lot = "0.12"
futures-util = "0.3"
async-stream = "0.3"
