[package]
name = "lamu-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI-compatible HTTP API"

[dependencies]
lamu-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
anyhow.workspace = true
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
parking_lot = "0.12"
futures-util = "0.3"
async-stream = "0.3"
prometheus = { version = "0.13", default-features = false }
socket2 = "0.5"
nix = { version = "0.29", features = ["signal"] }
dirs = "5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = { workspace = true }
proptest = "1"
tempfile = "3"
