[package]
name = "lamu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LAMU daemon entry point + CLI"

[[bin]]
name = "lamu"
path = "src/main.rs"

[dependencies]
lamu-core.workspace = true
lamu-providers.workspace = true
lamu-mcp = { path = "../lamu-mcp" }
lamu-api = { path = "../lamu-api" }
# Backend modules (ADR 0023) — registered at startup in main().
lamu-image = { path = "../lamu-image" }
lamu-tts = { path = "../lamu-tts" }
lamu-jart = { path = "../lamu-jart" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "rustls-tls"], default-features = false }
serde_json.workspace = true
futures-util = "0.3"
rustyline = "14"
ratatui = "0.28"
crossterm = "0.28"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
dirs = "5"
# Random bytes for `lamu auth init` token minting (ADR 0012). In the tree.
getrandom = "0.2"
termimad = "0.31"
toml = "0.8"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
