[package]
name = "lamu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LAMU daemon entry point + CLI"

[[bin]]
name = "lamu"
path = "src/main.rs"

[dependencies]
lamu-core.workspace = true
# ADR 0030: `lamu memory reembed` drives lamu-memory's lib-level
# plan/run + the CLI embedder chain (env override -> running serve -> OpenAI).
lamu-memory.workspace = true
lamu-providers.workspace = true
lamu-mcp = { path = "../lamu-mcp" }
lamu-api = { path = "../lamu-api" }
# Backend modules (ADR 0023) — registered at startup in main().
lamu-image = { path = "../lamu-image" }
lamu-tts = { path = "../lamu-tts" }
lamu-jart = { path = "../lamu-jart" }
lamu-jart-frontend = { path = "../lamu-jart-frontend" }
# In-process ONNX embeddings (ADRs 0033/0034). OPTIONAL: ort + tokenizers
# are heavy native deps (prebuilt ONNX Runtime download at build time) —
# the default build must never compile them. `--features onnx` (or `full`)
# opts in; main() registers the backend under the same cfg.
lamu-onnx = { path = "../lamu-onnx", optional = true }
# In-process HF-candle chat runtime (ADR 0035). OPTIONAL: candle is a
# heavy dep tree — the default build must never compile it. CPU candle by
# default (`hf-candle`); `hf-candle-cuda` opts into the nvcc kernel build
# (minutes; needs CUDAHOSTCXX=g++-14 on gcc-16 hosts).
lamu-hf = { path = "../lamu-hf", optional = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "rustls-tls"], default-features = false }
serde_json.workspace = true
futures-util = "0.3"
rustyline = "14"
ratatui = "0.28"
crossterm = "0.28"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
dirs = "5"
# Random bytes for `lamu auth init` token minting (ADR 0012). In the tree.
getrandom = "0.2"
termimad = "0.31"
toml = "0.8"
globset = "0.4"

[features]
# Module backends behind features (ADR 0034): heavy native deps opt in.
onnx = ["dep:lamu-onnx"]
# HF-candle chat runtime (ADR 0035), CPU inference — builds without nvcc.
hf-candle = ["dep:lamu-hf"]
# + candle's CUDA kernels for GPU inference. nvcc required; kernel
# compilation takes MINUTES (on this class of host: CUDAHOSTCXX=g++-14).
hf-candle-cuda = ["hf-candle", "lamu-hf/cuda"]
# Everything optional at once — `cargo build --features full`. CPU candle
# on purpose: `full` must stay buildable without nvcc. GPU users add
# hf-candle-cuda explicitly.
full = ["onnx", "hf-candle"]

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
# ACP tests implement lamu-core's #[async_trait] Backend for the fake
# in-test model backend. Already in the tree (lamu-core/mcp use it).
async-trait = "0.1"
