[package]
name = "lamu-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types, registry, scheduler, router, reasoning extraction"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir.workspace = true
tokio.workspace = true
dirs = "5"
byteorder = "1"
once_cell = "1"
nvml-wrapper = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
serde_json.workspace = true
nix = { version = "0.29", features = ["signal"] }
parking_lot = "0.12"
which = "6"

[dev-dependencies]
futures-util = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
