[package]
name = "lamu-image"
version = "0.1.0"
edition.workspace = true

# Image-generation MODULE (ADR 0023). Depends on lamu-core; lamu-core never
# depends on this. The ComfyUI backend + generate_image tool move here once the
# BackendRegistry/ToolCtx seams land (migration steps 2-3).
[dependencies]
lamu-core.workspace = true
