[package]
name = "lamu-image"
version = "0.1.0"
edition.workspace = true

# Image-generation MODULE (ADR 0023). Depends on lamu-core; lamu-core never
# depends on this. Owns the ComfyUI backend (moved from lamu-core/backends).
[dependencies]
lamu-core.workspace = true
async-trait = "0.1"
futures-util = "0.3"
tokio = { workspace = true, features = ["process", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing.workspace = true
dirs = "5"

[dev-dependencies]
serde_json.workspace = true
