[package]
name = "lamu-image"
version = "0.1.0"
edition.workspace = true

# Image-generation MODULE (ADR 0023). Depends on lamu-core; lamu-core never
# depends on this. Owns the ComfyUI backend (moved from lamu-core/backends).
[dependencies]
lamu-core.workspace = true
async-trait = "0.1"
futures-util = "0.3"
# Library crate: only the primitives comfyui uses. The binary (lamu-cli) owns
# the runtime (rt-multi-thread/macros), so they don't belong here.
tokio = { workspace = true, features = ["process", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing.workspace = true
dirs = "5"
serde_json.workspace = true
