[package]
name = "lamu-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP stdio server — primary interface"

[dependencies]
lamu-core.workspace = true
lamu-providers.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
humantime = "2"
which = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
futures-util = "0.3"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
