[package]
name = "lamu-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP stdio server — primary interface"

[dependencies]
lamu-core.workspace = true
lamu-providers.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
humantime = "2"
which = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
futures-util = "0.3"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
# OPT-IN compressed vector index backend. Off by default — the default
# build never pulls this dep (verify: `cargo tree -p lamu-mcp` lists no
# turbovec). NOTE (Linux): turbovec links a system OpenBLAS via
# openblas-src{features=["system"]}; the feature build requires OpenBLAS
# dev libs (Arch: `pacman -S openblas`) and gfortran on the link path.
turbovec = { version = "0.7.0", optional = true }

[features]
# Enable the TurboVecIndex backend (TurboQuant 2-4 bit compressed search).
# Brute-force cosine remains the DEFAULT; this only makes turbovec
# AVAILABLE behind LAMU_VECTOR_BACKEND=turbovec at runtime.
turbovec = ["dep:turbovec"]

[dev-dependencies]
tempfile = "3"
