[package]
name = "lamu-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP stdio server — primary interface"

[dependencies]
lamu-core.workspace = true
lamu-memory.workspace = true
lamu-providers.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
humantime = "2"
which = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
# Random per-process sentinel nonce for the untrusted-content envelope
# (untrusted.rs). Already in the dependency tree transitively; pinned to 0.2
# (stable getrandom::getrandom API). No new third-party surface.
getrandom = "0.2"
futures-util = "0.3"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
# Process-group kill for the cargo-test preflight timeout path (kill the
# whole rustc/test child tree, not just the cargo parent). Used only under
# cfg(unix); harmless elsewhere.
libc = "0.2"

[features]
# Enable the TurboVecIndex backend (TurboQuant 2-4 bit compressed search).
# Brute-force cosine remains the DEFAULT; this only makes turbovec
# AVAILABLE behind LAMU_VECTOR_BACKEND=turbovec at runtime. The dep itself
# moved to lamu-memory with the vector_index seam (ADR 0029); this feature
# just forwards. NOTE (Linux): the feature build needs system OpenBLAS —
# see lamu-memory/Cargo.toml.
turbovec = ["lamu-memory/turbovec"]

[dev-dependencies]
tempfile = "3"
