[package]
name = "lamu-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared memory/persistence capability — conversation log, lifetime fact store, repo RAG, vector-index seam (ADR 0029)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# Embedder trait is async (ADR 0030) — matches the existing async storage
# fns (remember/recall/index already await their embeds) and lets the
# frontends' local adapters await ensure-load + HTTP without block_on.
async-trait = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
# OPT-IN compressed vector index backend. Off by default — the default
# build never pulls this dep (verify: `cargo tree -p lamu-memory` lists no
# turbovec). NOTE (Linux): turbovec links a system OpenBLAS via
# openblas-src{features=["system"]}; the feature build requires OpenBLAS
# dev libs (Arch: `pacman -S openblas`) and gfortran on the link path.
turbovec = { version = "0.7.0", optional = true }

[features]
# Enable the TurboVecIndex backend (TurboQuant 2-4 bit compressed search).
# Brute-force cosine remains the DEFAULT; this only makes turbovec
# AVAILABLE behind LAMU_VECTOR_BACKEND=turbovec at runtime.
turbovec = ["dep:turbovec"]

[dev-dependencies]
tempfile = "3"
# Async tests for the embedder chain / hybrid recall / reembed paths.
tokio = { workspace = true }
