[package]
name = "lamu-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared memory/persistence capability — conversation log, lifetime fact store, repo RAG, vector-index seam (ADR 0029)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# Embedder trait is async (ADR 0030) — matches the existing async storage
# fns (remember/recall/index already await their embeds) and lets the
# frontends' local adapters await ensure-load + HTTP without block_on.
async-trait = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
# OPT-IN compressed vector index backend. Off by default — the default
# build never pulls this dep (verify: `cargo tree -p lamu-memory` lists no
# turbovec). NOTE (Linux): turbovec links a system OpenBLAS via
# openblas-src{features=["system"]}; the feature build requires OpenBLAS
# dev libs (Arch: `pacman -S openblas`) and gfortran on the link path.
# build.rs re-emits `-lopenblas` for the feature so TEST binaries link too
# (openblas-src's own directive reached lib/bin targets but not tests).
turbovec = { version = "0.7.0", optional = true }

[features]
# Enable the TurboVec backend (TurboQuant 2-4 bit compressed search).
# COMPILING the feature is the opt-in (ADR 0031): feature-on builds default
# to the persistent .tv index lifecycle (`tv_store`); `LAMU_VECTOR_BACKEND=
# brute` remains the runtime escape hatch. Feature-off builds keep the
# brute-force cosine path byte-identical.
turbovec = ["dep:turbovec"]

[dev-dependencies]
tempfile = "3"
# Async tests for the embedder chain / hybrid recall / reembed paths.
tokio = { workspace = true }
