[package]
name = "lamu-train"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local fine-tuning subsystem — trainer specs, lifecycle, and runner backends"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait = "0.1"
nix = { version = "0.29", features = ["signal"] }
dirs = "5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
